deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teddit
  labels:
    app: teddit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teddit
  template:
    metadata:
      labels:
        app: teddit
    spec:
      containers:
        - name: teddit
          image: teddit/teddit:latest
          ports:
            - containerPort: 8080
        - name: redis
          image: redis:6-alpine            
        - name: nginx
          image: nginx:stable-alpine
          volumeMounts:
            - mountPath: /etc/nginx
              name: teddit-nginx-conf
          ports:
            - containerPort: 80             
      volumes:
        - name: teddit-nginx-conf
          configMap:
            defaultMode: 444
            name: teddit-nginx-conf
