service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teddit
  labels:
    app: teddit
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: teddit
