ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teddit
  labels:
    app: teddit
spec:
  tls:
  - hosts:
      - teddit.beanteam.org
    secretName: beanteam-tls
  rules:
  - host: teddit.beanteam.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teddit
            port:
              number: 80
